src/test/ui/issues/issue-44023.stderr
error[E0308]: mismatched types
  --> $DIR/issue-44023.rs:5:36
   |
LL | fn საჭმელად_გემრიელი_სადილი ( ) -> isize {
   |    ------------------------        ^^^^^ expected isize, found ()
   |    |
   |    this function's body doesn't return
   |
   = note: expected type `isize`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
