src/test/ui/issues/issue-44023.rs
#![feature(non_ascii_idents)]

pub fn main () {}

fn საჭმელად_გემრიელი_სადილი ( ) -> isize { //~ ERROR mismatched types
}
